syntax = "proto3";

option go_package = "kloudlite.io/rpc/console";

service Console {
  rpc ArchiveEnvironmentsForCluster(ArchiveEnvironmentsForClusterIn) returns (ArchiveEnvironmentsForClusterOut);
}

message ArchiveEnvironmentsForClusterIn {
  string userId = 1;
  string userName = 2;
  string userEmail = 3;

  string accountName = 4;
  string clusterName = 5;
}

message ArchiveEnvironmentsForClusterOut {
  bool archived = 1;
}

